# kimi-book-writer

./: .env.example  .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  app.py  async_image_gen.py  image_gen.py  kimi_writer.py  pyproject.toml  run-ui.sh  utils.py
.devcontainer/: devcontainer.json  startup.sh
archived/: todo.md
published/: README.md  bird-planes-and-plain-birds.md  bird-planes-and-plain-birds_state.json  einstein-on-the-beach.md  einstein-on-the-beach_state.json  ghosts-in-the-wire.md  ghosts-in-the-wire_state.json  low-winds-blow.md  low-winds-blow_state.json  the-whoosh-of-love.md  the-whoosh-of-love_state.json
tests/: conftest.py  test_image_gen.py  test_kimi_writer.py  test_utils.py
